--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </nav>
 
   <div class="profile-box">
-  <img src="pp2.png" alt="Foto Rahmat Aditya" class="profile-img" />
+  <img src="item/img/pp2.png" alt="Foto Rahmat Aditya" class="profile-img" />
 
 </div>
   <main>
@@ -62,7 +62,7 @@
         <p>
         <em>Moto hidup: “Ngoding sambil healing, error langsung turu.”</em>
         </p>
-      <img src="AlyaChannn.jpg" alt="about image" />
+      <img src="item/img/AlyaChannn.jpg" alt="about image" />
       </div>
     </section>
 
