--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
   </header>
 
   <nav>
-    <a href="#home">Home</a>
-    <a href="project.html">Projects</a>
-    <a href="sertifikat.html">Sertifikat</a>
-    <a href="#about">About</a>
-    <a href="#contact">Contact</a>
+    <a href="#home">🏠 Home</a>
+    <a href="#about">👤 About</a>
+    <a href="project.html">🛠 Projects</a>
+    <a href="sertifikat.html">📜Sertifikat</a>
+    <a href="#contact">📫 Contact</a>
     
   </nav>
 
