--- a/project.html
+++ b/project.html
@@ -11,8 +11,8 @@
     <a href="index.html">🏠 Home</a>
     <a href="index.html#about">👤 About</a>
     <a href="#projects">🛠 Projects</a>
+    <a href="sertifikat.html">📜Sertifikat</a>
     <a href="index.html#contact">📫 Contact</a>
-    <a href="sertifikat.html">Sertifikat</a>
   </nav>
 
   <header>
