--- a/sertifikat.html
+++ b/sertifikat.html
@@ -8,11 +8,11 @@
 </head>
 <body>
   <nav>
-    <a href="index.html#home">Home</a>
-    <a href="project.html">Projects</a>
-    <a href="index.html#about">About</a>
-    <a href="#sertifikat">Sertifikat</a>
-    <a href="index.html#contact">Contact</a> 
+    <a href="index.html">🏠 Home</a>
+    <a href="index.html#about">👤 About</a>
+    <a href="project.html">🛠 Projects</a>
+    <a href="sertifikat.html">📜Sertifikat</a>
+    <a href="index.html#contact">📫 Contact</a>
   </nav>
 
   <header>
