--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Rahmat Aditya - Portfolio</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link rel="stylesheet" href="style.css" />
+  <link rel="icon" type="image/x-icon" href="item/img/porto.png">
   <script src="https://cdn.jsdelivr.net/npm/tsparticles@3.3.0/tsparticles.bundle.min.js"></script>
 
 </head>
