--- a/sertifikat.html
+++ b/sertifikat.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sertifikat Saya</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" type="image/x-icon" href="item/img/porto.png">
 </head>
 <body>
   <nav>
