--- a/sertifikat.html
+++ b/sertifikat.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sertifikat Saya</title>
+  <title>My Sertifikat</title>
   <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/x-icon" href="item/img/porto.png">
 </head>
