--- a/project.html
+++ b/project.html
@@ -29,9 +29,14 @@
     </section>
 
     <section class="card">
-      <h2>🎮 Cooming Soon</h2>
-      <p>Waiting For... 🔥</p>
-      <a href="#" class="btn">View Project</a>
+      <h2>📂 File Sharing</h2>
+      <p>Sistem Berbagi File (Python Server)
+        Aplikasi web sederhana untuk sharing file secara aman di jaringan lokal, dibuat dengan Python Server. Pengguna bisa upload, lihat, dan download file/folder lewat antarmuka yang dilindungi kata sandi, dengan QR code untuk akses cepat.
+        Tujuan: Memudahkan untuk sharing file yang aman untuk tim kecil atau penggunaan pribadi, dengan pembaruan real-time dan akses ramah mobile.</p>
+
+        <p> Project ini masih dalam tahap pengembangan <strong>(belum support sharing file besar)</strong> </p>
+        <em>“For Updade : Coming Soon”</em>
+      <a href="https://github.com/rillToMe/file-sharing-system-py" class="btn">View Project</a>
     </section>
 
     <section class="card">
