--- a/project.html
+++ b/project.html
@@ -40,9 +40,9 @@
     </section>
 
     <section class="card">
-      <h2>📱 Cooming Soon</h2>
-      <p>Waiting For... 😼</p>
-      <a href="#" class="btn">View Project</a>
+      <h2>🎮 Cooming Soon</h2>
+      <p>Waiting For... 😼 (Please click the button)</p>
+      <a href="waiting.html" class="btn">View Project</a>
     </section>
   </main>
 
