--- a/waiting.html
+++ b/waiting.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Still Waiting...</title>
+  <link rel="icon" type="image/x-icon" href="item/img/porto.png">
   <style>
     body {
       background-color: #0f0f0f;
