--- a/waiting.html
+++ b/waiting.html
@@ -51,6 +51,11 @@
     <source src="item/video/mr_bean.mp4" type="video/mp4" />
     Your browser does not support the video tag.
   </video>
+
+  <audio autoplay loop>
+  <source src="music/waiting_sound.mp3" type="audio/mp3">
+  Your browser does not support the audio element.
+</audio>
   <a href="index.html" class="back-btn">⏪ Back to Portfolio</a>
 </body>
 </html>
