--- a/waiting.html
+++ b/waiting.html
@@ -43,6 +43,18 @@
       background-color: #5ce1e6;
       color: #000;
     }
+    .tap-msg {
+      text-align: center;
+      font-size: 1rem;
+      margin-top: 1rem;
+      color: #ccc;
+      animation: blink 1s infinite;
+    }
+
+     @keyframes blink {
+     0%, 100% { opacity: 0.5; }
+     50% { opacity: 1; }
+    }
   </style>
 </head>
 <body>
