--- a/music_player.html
+++ b/music_player.html
@@ -37,7 +37,7 @@
   const playlist = [
     "music/the_way_life_goes.mp3",
     "music/Wasted.mp3",
-    "music/Tumblr_Girls.mp3"
+    "music/tumblr_girls.mp3"
   ];
 
   let currentTrack = 0;
