--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
 <script>
   document.addEventListener("DOMContentLoaded", function () {
-    const texts = ["Gamers", "GameDev", "Wibu", "AlyaHusband"];
+    const texts = ["Gamers", "GameDev", "Read Manga", "AlyaHusband"];
     let count = 0;
     let index = 0;
     let currentText = '';
