--- a/index.html
+++ b/index.html
@@ -78,6 +78,13 @@
         </ul>
       </div>
     </section>
+
+    <section class="suggestion-cta glass">
+  <h2>💬 Punya Saran atau Masukan?</h2>
+  <p>Kami terbuka untuk segala bentuk kritik & ide kreatif kamu!</p>
+  <a href="saran.html" class="btn btn-cta">📝 Beri Saran</a>
+</section>
+    
   </main>
 
 
