--- a/saran.html
+++ b/saran.html
@@ -44,7 +44,8 @@ const videoOverlay = document.getElementById("video-overlay");
 const goodJobVid = document.getElementById("good-job-video");
 
 
-const scriptURL = "https://script.google.com/macros/s/AKfycbxr0q04H_f9u8-MOgwXcLJ-0EYfsP02gHnmyYtGJuRyXX2mMNmJkyVYEw-xeiKXbZFl/exec";
+const scriptURL = const scriptURL = "/api/proxy";
+
 
 form.addEventListener("submit", async (e) => {
   e.preventDefault();
@@ -83,3 +84,4 @@ form.addEventListener("submit", async (e) => {
 
 </body>
 </html>
+
