--- a/saran.html
+++ b/saran.html
@@ -44,7 +44,7 @@ const videoOverlay = document.getElementById("video-overlay");
 const goodJobVid = document.getElementById("good-job-video");
 
 
-const scriptURL = const scriptURL = "/api/proxy";
+const scriptURL = "/api/proxy";
 
 
 form.addEventListener("submit", async (e) => {
@@ -84,4 +84,5 @@ form.addEventListener("submit", async (e) => {
 
 </body>
 </html>
+
 
