--- a/saran.html
+++ b/saran.html
@@ -43,40 +43,45 @@ const popup = document.getElementById("popup-notif");
 const videoOverlay = document.getElementById("video-overlay");
 const goodJobVid = document.getElementById("good-job-video");
 
-
-const scriptURL = "/api/proxy";
-
+// URL proxy di Vercel
+const proxyURL = "/api/proxy";
 
 form.addEventListener("submit", async (e) => {
   e.preventDefault();
 
   const data = {
-  nama: form.querySelector("input[name='nama']").value,
-  email: form.querySelector("input[name='email']").value,
-  telepon: form.querySelector("input[name='telepon']").value,
-  pesan: form.querySelector("textarea[name='pesan']").value,
+    nama: form.querySelector("input[name='nama']").value,
+    email: form.querySelector("input[name='email']").value,
+    telepon: form.querySelector("input[name='telepon']").value,
+    pesan: form.querySelector("textarea[name='pesan']").value,
   };
 
   try {
-    await fetch(scriptURL, {
+    const res = await fetch(proxyURL, {
       method: "POST",
       headers: { "Content-Type": "application/json" },
       body: JSON.stringify(data),
     });
 
-    videoOverlay.classList.add("show");
-    goodJobVid.style.display = "block";
-    goodJobVid.play().then(() => popup.classList.add("popup-visible"));
+    const result = await res.json();
 
-    goodJobVid.onended = () => {
-      popup.classList.remove("popup-visible");
-      goodJobVid.style.display = "none";
-      videoOverlay.classList.remove("show");
-    };
+    if (result.success) {
+      videoOverlay.classList.add("show");
+      goodJobVid.style.display = "block";
+      goodJobVid.play().then(() => popup.classList.add("popup-visible"));
 
-    form.reset();
+      goodJobVid.onended = () => {
+        popup.classList.remove("popup-visible");
+        goodJobVid.style.display = "none";
+        videoOverlay.classList.remove("show");
+      };
+
+      form.reset();
+    } else {
+      alert("⚠️ Gagal mengirim saran, coba lagi ya!");
+    }
   } catch (err) {
-    console.log("DEBUG ERROR: ", err);
+    console.error("DEBUG ERROR:", err);
     alert("⚠️ Gagal mengirim saran, coba lagi ya!");
   }
 });
@@ -84,5 +89,6 @@ form.addEventListener("submit", async (e) => {
 
 </body>
 </html>
+
 
 
